Say that careful cross-context data sharing can be appropriate. (#80)
* Require following both sets of norms.

* Rewrite the data-sharing example to be more real-world.

--- a/index.html
+++ b/index.html
@@ -473,16 +473,19 @@ We define <dfn>privacy</dfn> as a right to [=appropriate=] [=data processing=]. 
 
 Note that a [=first party=] can be comprised of multiple [=contexts=] if it is large
 enough that [=people=] would interact with it for more than one [=purpose=]. [=Sharing=]
-[=personal data=] across [=contexts=] is, in the overwhelming majority of cases,
-[=inappropriate=].
+[=personal data=] across [=contexts=] is only [=appropriate=] if the subsequent
+use of that data follows the [=norms=] of both the context in which the data was
+collected and the context in which it is used.
 
-<div class="example">
+<div class="example" id="data-sharing-example">
 
-Your cute little pup uses <em>Poodle Naps</em> to find comfortable places to snooze,
-and <em>Poodle Fetch</em> to locate the best sticks. Napping and fetching are different
-[=contexts=] with different norms, and sharing data between these contexts is a
-[=privacy violation=] despite the shared ownership of <em>Naps</em> and <em>Fetch</em>
-by the <em>Poodle</em> conglomerate.
+You share personal data with your bank in the context of managing your money. They would like to
+re-use that data in order to help another merchant sell you a product based on the purchase history
+the bank can see. Since marketing is a different [=context=] from banking, using your data in this
+way is usually a [=privacy violation=].
+
+If instead the bank is recommending a product to help your financial affairs, this may be an
+[=appropriate=] use of data, or even a use within the original [=context=].
 
 </div>
 
