Change "about" back to "related to" in definition of "personal data".

--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ of an event that occurs nearly-simultaneously on both sites.
 ## Data {#data}
 
 We define <dfn data-lt="data">personal data</dfn> as any information that is directly or
-indirectly about an identified or identifiable [=person=], such as by reference to an
+indirectly related to an identified or identifiable [=person=], such as by reference to an
 [=identifier=] ([[GDPR]], [[OECD-GUIDELINES]], [[CONVENTION-108]]).
 
 If a [=person=] could reasonably be identified or re-identified when [=data=] is combined with other
