Example of an information sharing norm
Use an example that makes it clear that the concern is information
usage norms, not just annoying user experience.

--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@ cocktail party is more open. Information about what a person searches or shops f
 be used to improve their future search results, but shouldn't be used to affect a job
 application or even to gossip with their neighbors. Information about where a person is
 trying to go can be used to help them get there, but not to tell their partner they're
-cheating. Interruptions from chat partners are expected, but flashing ads and
-notifications about irrelevant products aren't.
+cheating.  Automatic suggestions of names of co-workers and friends are expected on messaging
+or collaboration sites, but suggestion of the names of people who rode the same bus are not.
 
 </aside>
 
