make one larger intro section to give everything context

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ conclusion of the task force, the TAG intends to adopt this document as a Findin
 
 </section>
 
-# Introduction {#intro}
+# Privacy on the Web {#intro}
 
 <dfn>Privacy</dfn> is an essential value of the Web ([[?ETHICAL-WEB]],
 [[?design-principles]]).
@@ -297,9 +297,9 @@ benefit from having shared concepts to guide its evolution as a system built for
 can hopefully help all the Web's participants in different legal regimes. Our shared
 understanding is that the law is a floor, not a ceiling.
 
-# Who is Involved {#who}
+## Who is Involved {#who}
 
-## People {#people}
+### People {#people}
 
 A <dfn data-lt="individual|people|user|data subject">person</dfn> (also [=user=] or [=data subject=]) is any natural
 person. Throughout this document, we primarily use [=person=] or [=people=] to refer to human beings, as a
@@ -315,7 +315,7 @@ are employees with respect to their employers, are facing a steep asymmetry of p
 are people in some situations of intellectual or psychological impairment, are
 refugees, etc.
 
-## Their Software Agents {#user-agents}
+### Their Software Agents {#user-agents}
 
 The <dfn>user agent</dfn> acts as an intermediary between a [=person=] (its [=user=]) and the web. The
 [=user agent=] is <em>not</em> a [=context=] because it is expected to align fully with the
@@ -383,12 +383,12 @@ their agency and sovereignty.
 In academic research, this relationship with a [=trustworthy agent=] is often described as
 "fiduciary" [[?FIDUCIARY-UA]].
 
-## Guardians and Device Owners {#guardians-and-owners}
+### Guardians and Device Owners {#guardians-and-owners}
 
 <aside class="issue" data-number="2">
 </aside>
 
-## Server-Side Parties {#parties}
+### Server-Side Parties {#parties}
 
 A <dfn>party</dfn> is an entity that a [=person=] can reasonably understand as a single "thing"
 they're interacting with. Uses of this document in a particular domain are expected to describe how
@@ -410,7 +410,7 @@ A <dfn data-lt="third parties">third party</dfn> is any [=party=] other than the
 the [=first party=], or a [=service provider=] acting on behalf of either the [=person=] or
 the [=first party=].
 
-# Contexts {#contexts}
+## Contexts {#contexts}
 
 A <dfn>context</dfn> is a physical or digital environment that a [=person=] interacts with
 for a [=purpose=] of their own (that they typically share with other [=people=] who
@@ -495,7 +495,7 @@ If instead the bank is recommending a product to help your financial affairs, th
 
 </div>
 
-# Personal Control and Autonomy {#autonomy}
+## Personal Control and Autonomy {#autonomy}
 
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own volition,
 without undue influence from other parties. People have limited intellectual resources and
@@ -522,7 +522,7 @@ confused with the contention that privacy is dead. Careful design of our technol
 infrastructure can ensure that people's [=autonomy=] as pertaining to their own [=data=]
 is enhanced through [=appropriate=] defaults and choice architectures.
 
-## Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
+### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
 
 <aside class="issue">Broaden this from [=processing=] to general interactions with systems.</aside>
 
@@ -609,7 +609,7 @@ in terms of specificity over any manner of blanket [=consent=] that a site may o
 unless that [=consent=] is directly attached to an interaction (eg. terms specified on a
 form upon submission).
 
-## Privacy Labour
+### Privacy Labour
 
 Additionally, <dfn data-lt="privacy-labor">privacy labour</dfn> is the practice of having
 a [=person=] carry out the work of ensuring [=data processing=] of which they are the
